Login y Auxiliares Mejorados

--- a/src/app/paginas/operaciones-diarias/SR/registro-solicitud/registro-solicitud.component.html
+++ b/src/app/paginas/operaciones-diarias/SR/registro-solicitud/registro-solicitud.component.html
@@ -572,7 +572,7 @@
       data-dismiss="modal"
       (click)="formModalBuscarAuxiliares.hide()"
     >
-      Cancelar
+      Cerrar
     </button>
   </div>
 </ng-template>
@@ -825,7 +825,7 @@
             <button
               type="button"
               class="btn btn-primary my-4"
-              (click)="formModal.hide()"
+              (click)="formModalSUNAT.hide()"
             >
               Cancelar
             </button>
