--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -106,7 +106,12 @@
       </ul>
       <!-- User -->
       <ul class="navbar-nav align-items-center ml-auto ml-md-0">
-        <li class="nav-item dropdown" dropdown placement="bottom-right">
+        <li
+          class="nav-item dropdown"
+          dropdown
+          placement="bottom-right"
+          style="cursor: pointer"
+        >
           <a class="nav-link pr-0 dropdown-toggle" role="button" dropdownToggle>
             <div class="media align-items-center">
               <span class="avatar avatar-sm rounded-circle">
@@ -154,8 +159,9 @@
               <i class="ni ni-support-16"></i> <span>Soporte</span>
             </a>
             <div class="dropdown-divider"></div>
-            <a href="javascript:void()" class="dropdown-item">
-              <i class="ni ni-user-run"></i> <span>Cerrar Sesión</span>
+            <a class="dropdown-item">
+              <i class="ni ni-user-run"></i>
+              <span (click)="CerrarSesion()">Cerrar Sesión</span>
             </a>
           </div>
         </li>
