--- a/src/app/paginas/operaciones-diarias/SR/registro-gasto/registro-gasto.component.html
+++ b/src/app/paginas/operaciones-diarias/SR/registro-gasto/registro-gasto.component.html
@@ -597,7 +597,7 @@
       data-dismiss="modal"
       (click)="formModalBuscarAuxiliares.hide()"
     >
-      Cancelar
+      Cerrar
     </button>
   </div>
 </ng-template>
@@ -850,7 +850,7 @@
             <button
               type="button"
               class="btn btn-primary my-4"
-              (click)="formModal.hide()"
+              (click)="formModalSUNAT.hide()"
             >
               Cancelar
             </button>
