--- a/src/app/paginas/operaciones-diarias/movimientos/registro-asiento/registro-asiento.component.html
+++ b/src/app/paginas/operaciones-diarias/movimientos/registro-asiento/registro-asiento.component.html
@@ -815,7 +815,7 @@
       data-dismiss="modal"
       (click)="formModalBuscarResponsableGiro.hide()"
     >
-      Cancelar
+      Cerrar
     </button>
   </div>
 </ng-template>
@@ -898,7 +898,7 @@
       data-dismiss="modal"
       (click)="formModalBuscarAuxiliares.hide()"
     >
-      Cancelar
+      Cerrar
     </button>
   </div>
 </ng-template>
@@ -1306,7 +1306,7 @@
             <button
               type="button"
               class="btn btn-primary my-4"
-              (click)="formModal.hide()"
+              (click)="formModalSUNAT.hide()"
             >
               Cancelar
             </button>
