--- a/src/app/paginas/operaciones-diarias/SR/registro-solicitud/registro-solicitud.component.html
+++ b/src/app/paginas/operaciones-diarias/SR/registro-solicitud/registro-solicitud.component.html
@@ -415,7 +415,9 @@
   <br />
   <pre>{{ formaOperacion.value | json }}</pre>
   <br />
-  <pre>{{ formaDetalleSR.value | json }}</pre> -->
+  <pre>{{ formaDetalleSR.value | json }}</pre>
+  <br />
+  <pre>{{ formaSR.value | json }}</pre> -->
 </div>
 
 <!-- Modal Buscar Plan Contable -->
