--- a/src/app/components/sidebar/sidebar.component.html
+++ b/src/app/components/sidebar/sidebar.component.html
@@ -106,7 +106,14 @@
                           *ngFor="let childitem of childitems.children"
                           class="nav-item"
                         >
-                          <a href="javascript:void(0)" class="nav-link">
+                          <a
+                            [routerLink]="[
+                              menuitem.path,
+                              childitems.path,
+                              childitem.path
+                            ]"
+                            class="nav-link"
+                          >
                             {{ childitem.title }}
                           </a>
                         </li>
