--- a/src/app/paginas/operaciones-diarias/SR/registro-gasto/registro-gasto.component.html
+++ b/src/app/paginas/operaciones-diarias/SR/registro-gasto/registro-gasto.component.html
@@ -388,6 +388,14 @@
                 >
                   {{ Id_Operacion > 0 ? 'Modificar item' : 'Agregar item' }}
                 </button>
+                <button
+                  mat-raised-button
+                  type="button"
+                  class="btn btn-sm btn-outline-warning"
+                  (click)="LimpiarFormaOperacion()"
+                >
+                  Limpiar
+                </button>
               </div>
               <div class="table-responsive">
                 <br />
@@ -421,7 +429,7 @@
                   <tbody class="list">
                     <tr mdbTableCol *ngFor="let dato of Datos">
                       <td>
-                        {{ dato.FechaOperacion | date: 'dd/MM/yyyy':'UTC' }}
+                        {{ dato.FechaOperacion | date: 'dd/MM/yyyy':'+0500' }}
                       </td>
                       <td>{{ dato.Codigo_PlanCuenta }}</td>
                       <td>
