Reporte SR Mensual Terminado

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,27 @@
-/* You can add global styles to this file, and also import other style files */
+.Presupuesto {
+  background-color: rgb(184, 209, 138) !important;
+  text-align: center !important;
+  // margin: 0% !important;
+  height: auto !important;
+  line-height: 100px !important;
+}
+
+.MontoRICC {
+  background-color: rgb(254, 255, 193) !important;
+  text-align: center !important;
+  // margin: 0% !important;
+  height: auto !important;
+  line-height: 100px !important;
+}
+
+.GastoTotal {
+  background-color: rgb(250, 203, 166) !important;
+  text-align: center !important;
+  // margin: 0% !important;
+  height: auto !important;
+  line-height: 100px !important;
+}
+
+.Centrar {
+  text-align: center !important;
+}
